css/style.css
/* common styles */
html {
    font-size: 62.5%;
    box-sizing: border-box;
}

body {
    color: #303030;
    margin: 0;
    padding: 0;
    font-family: 'Montserrat', sans-serif;
}
/* end of common styles */

/* navbar */
/* sidebar */
.sidebar {
    width: 8rem;
    height: 100%;
    background-color: rgb(82, 75, 52);
    background-blend-mode: multiply;
    background-image: url(../img/hero.png);
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    position: fixed;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    z-index: 10;
}

.menu-icon {
    margin-top: 3rem;
    cursor: pointer;
}

.line {
    height: .2rem;
    width: 2.5rem;
    background-color: #16e0bd;
    margin-bottom: .6rem;
}

.line-1, .line-3 {
    width: 1.8rem;
    transition: all .4s;
}

.menu-icon:hover .line {
    width: 2.5rem;
}

.social-icons-list {
    list-style: none;
    padding: 0;
    height: 25rem;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
}


.social-link {
    font-size: 2rem;
    color: #777;
    transition: color .3s;
}

.social-link:hover {
    color: #16e0bd;
}

.year {
    margin-bottom: 1rem;
    font-size: 1.5rem;
    color: #16e0bd;
}
/* end of sidebar */

/* navigation */
.navigation {
    position: fixed;
    left: -32rem;
    width: 40rem;
    height: 100%;
    background-color: rgb(82, 75, 52);
    background-blend-mode: multiply;
    background-image: url(../img/hero.png);
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    z-index: 5;
    transition: left .8s cubic-bezier(1, 0, 0, 1);
}

.navigation-heading {
    font-family: 'Josefin Sans', sans-serif;
    font-size: 3.5rem;
    font-weight: 300;
    letter-spacing: .2rem;
    color:  #16e0bd;
    text-align: center;
}

.navigation-list {
    list-style: none;
    padding: 0;
    height: 28rem;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

.navigation-item {
    position: relative;
}

.navigation-link {
    color: #fff;
    font-size: 1.6rem;
    font-weight: 400;
    letter-spacing: .1rem;
    text-transform: uppercase;
    text-decoration: none;
    transition: color .5s;
}

.navigation-link::before {
    content: "";
    width: 0rem;
    height: .1rem;
    background-color:  #16e0bd;
    position: absolute;
    top: 1rem;
    left: -4rem;
    transition: width .5s cubic-bezier(1, 0, 0, 1);
}

.navigation-link::after {
    content: "";
    width: 0rem;
    height: .1rem;
    background-color:  #16e0bd;
    position: absolute;
    top: 1rem;
    right: -4rem;
    transition: width .5s cubic-bezier(1, 0, 0, 1);
}

.navigation-link:hover {
    color:  #16e0bd;
}

.navigation-link:hover::before,
.navigation-link:hover::after {
    width: 3rem;
}

.copyright {
    color: #fff;
    font-size: 1.2rem;
    margin-bottom: 1.5rem;
}

.checkbox:checked ~ .navigation {
    left: 8rem;
}

.checkbox:checked ~ .sidebar .line-1 {
    transform: rotate(-405deg) translate(-5px, 6px);
    width: 2.5rem;
}

.checkbox:checked ~ .sidebar .line-2 {
    opacity: 0;
}

.checkbox:checked ~ .sidebar .line-3 {
    transform: rotate(405deg) translate(-5px, -6px);
    width: 2.5rem;
}
/* end of navigation */
/* end of navbar */

/* header */
.header {
    margin-left: 8rem;
    height: 100vh;
    background-image: url(../img/hero.png);
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
}

.banner {
    height: 65rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.banner-heading {
    font-family: 'Josefin Sans', sans-serif;
    font-size: 7rem;
    font-weight: 400;
    margin-bottom: 0;
    animation: anim 2s;
}

.banner-paragraph {
    font-size: 3.5rem;
    font-weight: 300;
    animation: anim 1.5s .5s backwards;
}


.banner-button {
    background-repeat: no-repeat;
    background-color: #1CBDC5;
    border: 2px solid #1CBDC5;
    border-radius: 0;
    color:#303030;
    cursor: pointer;
    font-size: 2rem;
    font-weight: 500;
    letter-spacing: 1px;
    margin: 10px 0;
    min-width: 205px;
    padding: 15px 20px;
    text-align: center;
    text-decoration: none;
    text-transform: uppercase;
    transform: skewX(-10deg);
}


a {
    outline: none;
    transition: all .15s ease-in-out;
}

.banner-button:hover {
    color: #303030;
    background-color:#F5E1A1;
    border-color: #F5E1A1;
}

@keyframes anim {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}
/* end of header */

/* about me */
.about-me {
    margin-left: 8rem;
    display: flex;
    background-image: url(../img/hero.png);
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-color: rgb(24, 22, 14);
    background-blend-mode: multiply;
    color:  #fff;
}

.about-me-content {
    flex: 0 1 50%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 10rem;
    box-sizing: border-box;
    color: #fff;
}

.about-me-heading {
    font-family: 'Josefin Sans', sans-serif;
    font-size: 4rem;
    font-weight: 300;
    text-transform: uppercase;
    color: #16e0bd;
}

.sub-heading {
    font-size: 1.5rem;
    font-weight: 300;
    letter-spacing: .1rem;
    color: #16e0bd;
    text-transform: uppercase;
}

.about-me-paragraph {
    font-size: 1.8rem;
    font-style: italic;
    font-weight: 300;
    letter-spacing: .2rem;
    margin-bottom: 5rem;
}

.about-me-image {
    flex: 1 1;
    position: relative;
}

.image {
    width: 32rem;
    position: absolute;
    top: 50%;
    left: 50%;
    box-shadow: 0 3rem 6rem rgba(0, 0, 0, .4);
    border-radius: .4rem;
    border: .2rem;
}

.image-3 {
    transform: translate(-55%, -50%);
}

/* end of about me */

/* project header */
.project-header {
    background-image: url(../img/hero.png);
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    padding: 5rem;
    text-align: center;
}

.project-heading {
    font-family: 'Josefin Sans', sans-serif;
    font-size: 7rem;
    font-weight: 400;
    margin-bottom: 0;
    animation: anim 2s;
}

.small-underline, 
.big-underline {
    background-color:#16e0bd;
    height: .1rem;
}

.small-underline {
    width: 9rem;
    margin: 0 auto 1rem auto;
}

.big-underline {
    width: 20rem;
    margin: auto;
}
/* end of project header */

/* projects */
.projects {
    margin-left: 8rem;
    background-image: url(../img/hero.png);
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
}

.projects-cards-wrapper {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.project-card {
    width: 60rem;
    margin: 5rem;
    background-color: rgb(24, 22, 14);
    background-blend-mode: multiply;
    background-image: url(../img/hero.png);
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    box-shadow: 0 3rem 6rem rgba(0, 0, 0, .4);
    border-radius: .5rem;
    border: .2rem;
    overflow: hidden;
}

.project-img {
    width: 100%;
    filter: brightness(100%);
    transition: 
        transform 750ms cubic-bezier(.5, 0, .5, 1),
        opacity 250ms linear;
}

.project-img:hover, 
.project-card:focus .project-img {
    transform: scale(1.1);
    filter: brightness(100%);
}

.project-card-content {
    color: #ddd;
    padding: 2rem;
}

.project-card-heading {
    margin: 0;
    font-size: 3rem;
    font-weight: 400;
}

.project-card-paragraph {
    font-size: 1.5rem;
    color:  #ddd;
}

a.project-card-btn {
    padding: 0.35em 1.2em;
    border: 0.16em solid #0baa8f;
    margin: 0 0.3em 0.3em 0;
    border-radius: .8em;
    text-decoration: none;
    text-transform: uppercase;
    text-align:center; 
    font-weight: 600;
    font-size: 1.2rem;
    background-color:  #16e0bd;
    color:#303030;
    letter-spacing: 1px;
    -moz-transition: all 0.2s;
    -webkit-transition: all 0.2s;
    transition: all 0.2s;
}

a.project-card-btn:hover {
    color: #303030;
    opacity: 1;
    font-weight: 800;
    background-color:  #fff;
    border: 0.16em solid #fff;
} 

.proj-icons {
    list-style: none;
    -ms-box-orient: horizontal;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -moz-flex;
    display: -webkit-flex;
    display: flex;
    justify-content: flex-start;
}

.tech-icons {
    padding: 0;
    margin: 0;
    list-style: none;
    -ms-box-orient: horizontal;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -moz-flex;
    display: -webkit-flex;
    display: flex;
    justify-content: flex-end;
}

.nowrap  { 
  -webkit-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.tech {
    font-size: 2.5rem;
    height: 5rem;
    color: #16e0bd;
    transition: color .3s;
    text-decoration: none;
    list-style: none;
    padding: 5px;
    cursor: default;
}
/* end of projects */

/* footer */
.footer {
    margin-left: 8rem;
}

.main-part {
    display: flex;
    justify-content: space-between;
    background-image: url(../img/hero.png);
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-color: rgb(82, 75, 52);
    background-blend-mode: multiply;
    padding: 1rem;
}

.creator-part {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 4rem;
}

.copyright-text {
    font-size: 1.3rem;
    color: #16e0bd;
}

.text-right {
    font-size: 1.4rem;
    color: #16e0bd;
}

.text-right i {
    font-size: 2rem;
    margin: .5rem;
    color: rgb(221, 56, 27);
} 

.text-right span {
    color: #16e0bd;
}
/* end of footer */

